Add file dataextension

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -21,3 +21,5 @@ FileAttachmentField:
     auto_process_queue: true
     auto_queue: true
     add_remove_links: false    
+File:
+  extensions: [DropzoneFile]
