--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "unclecheese/dropzone",
+  "name": "smarcet/dropzone",
   "description": "An HTML5 upload field for the CMS and frontend forms.",
   "type": "silverstripe-module",
   "keywords": [
