--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,15 @@
     "description": "An HTML5 upload field for the CMS and frontend forms.",
     "type": "silverstripe-module",
     "keywords": ["silverstripe", "upload", "uploader", "files", "forms", "cms"],
-	"license": "BSD-3-Clause",
-    "authors": [
-    {
+    "license": "BSD-3-Clause",
+    "authors": [{
         "name": "Uncle Cheese",
         "email": "unclecheese@leftandmain.com"
-    }
-    ],
-    "require":
-    {
-        "silverstripe/framework": "3.*"
+    }],
+    "require": {
+        "silverstripe/framework": "4.*"
     },
     "extra": {
-	   "installer-name": "dropzone"
+        "installer-name": "dropzone"
     }
 }
