FIX: Namespacing in config

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,7 +1,7 @@
 ---
 Name: dropzone
 ---
-UncleCheese\Dropzone\FileAttachmentField:
+UncleCheese\DropZone\FileAttachmentField:
   default_config_path: javascript/default_config.json
   icon_sizes:
     - 16
